cmake_minimum_required(VERSION 3.22)
project(learn_cpp_primer)

set(CMAKE_CXX_STANDARD 11)


add_executable(ex1_1 ch01/ex1_1.cpp)
add_executable(ex1_2 ch01/ex1_2.cpp)
add_executable(ex1_3 ch01/ex1_3.cpp)
add_executable(ex1_4 ch01/ex1_4.cpp)
add_executable(ex1_5 ch01/ex1_5.cpp)
add_executable(ex1_9 ch01/ex1_9.cpp)
add_executable(ex1_10 ch01/ex1_10.cpp)
add_executable(ex1_11 ch01/ex1_11.cpp)
add_executable(ex1_16 ch01/ex1_16.cpp)
add_executable(ex2_3 ch02/ex2_3.cpp)
add_executable(ex2_7 ch02/ex2_8.cpp)
add_executable(ex2_18 ch02/ex2_18.cpp)
add_executable(ex2_34 ch02/ex2_34.cpp)
add_executable(ex2_40 ch02/ex2_40.cpp)
add_executable(dm2_6_2 ch02/dm2_6_2.cpp)
add_executable(ex2_41 ch02/ex2_41.cpp)
add_executable(ex3_1a ch03/ex3_1a.cpp)
add_executable(ex3_1b ch03/ex3_1b.cpp)
add_executable(ex3_2a ch03/ex3_2a.cpp)
add_executable(ex3_2b ch03/ex3_2b.cpp)
add_executable(ex3_4a ch03/ex3_4a.cpp)
add_executable(ex3_4b ch03/ex3_4b.cpp)
add_executable(ex3_5a ch03/ex3_5a.cpp)
add_executable(ex3_5b ch03/ex3_5b.cpp)
add_executable(ex3_6 ch03/ex3_6.cpp)
add_executable(ex3_7 ch03/ex3_7.cpp)
add_executable(ex3_8 ch03/ex3_8.cpp)
add_executable(ex3_10 ch03/ex3_10.cpp)
add_executable(ex3_14 ch03/ex3_14.cpp)
add_executable(ex3_15 ch03/ex3_15.cpp)
add_executable(ex3_16 ch03/ex3_16.cpp)
add_executable(ex3_17 ch03/ex3_17.cpp)
add_executable(ex3_19 ch03/ex3_19.cpp)
add_executable(ex3_20a ch03/ex3_20a.cpp)
add_executable(ex3_20b ch03/ex3_20b.cpp)
add_executable(ex3_21 ch03/ex3_21.cpp)
add_executable(ex3_22 ch03/ex3_22.cpp)
add_executable(ex3_23 ch03/ex3_23.cpp)
add_executable(ex3_24a ch03/ex3_24a.cpp)
add_executable(ex3_24b ch03/ex3_24b.cpp)
add_executable(ex3_25 ch03/ex3_25.cpp)
add_executable(ex3_31 ch03/ex3_31.cpp)
add_executable(ex3_32 ch03/ex3_32.cpp)
add_executable(ex3_33 ch03/ex3_33.cpp)
add_executable(ex3_35 ch03/ex3_35.cpp)
add_executable(ex3_36 ch03/ex3_36.cpp)
add_executable(ex3_39 ch03/ex3_39.cpp)
add_executable(ex3_40 ch03/ex3_40.cpp)
add_executable(ex3_41 ch03/ex3_41.cpp)
add_executable(ex3_42 ch03/ex3_42.cpp)
add_executable(ex3_43 ch03/ex3_43.cpp)
add_executable(ex3_44 ch03/ex3_44.cpp)
add_executable(ex3_45 ch03/ex3_45.cpp)